@@ -4,6 +4,7 @@ package HTML::FormHandler::Widget::Form::Table;
 use Moose::Role;
 with 'HTML::FormHandler::Widget::Form::Simple' =>
     { -excludes => [ 'render_start', 'render_end', 'render_form_errors' ] };
+use HTML::FormHandler::Render::Util ('process_attrs');
 
 =head1 SYNOPSIS
 
@@ -19,7 +20,8 @@ Use in a template:
 
 sub render_start {
     my $self   = shift;
-    return $self->html_form_tag . "<table>\n";
+    my $attrs = process_attrs($self->attributes);
+    return qq{<form$attrs><table>\n};
 }
 
 sub render_form_errors {
