@@ -19,13 +19,14 @@ $form->process( params => { bar => 'abc' } );
 
 is( $form->num_errors, 2, 'got two errors' );
 
-my $expected = '<form id="test_errors" method="post" >
-<fieldset class="main_fieldset">
+my $expected = 
+'<fieldset class="main_fieldset">
+<form id="test_errors" method="post" >
 <div class="error"><label for="foo">Foo: </label><input type="text" name="foo" id="foo" value="" />
 <span class="error_message">Foo field is required</span></div>
 <div class="error"><label for="bar">Bar: </label><input type="text" name="bar" id="bar" size="8" value="abc" />
 <span class="error_message">Value must be an integer</span></div>
-</fieldset></form>';
+</form></fieldset>';
 my $rendered = $form->render;
 
 my $exp_tree = HTML::TreeBuilder->new_from_content($expected);
