@@ -173,8 +173,9 @@ is( $output10, q{
 }, 'output from radio group' );
 
 my $output11 = $form->render_start;
-is( $output11,'<form id="testform" method="post" >
-<fieldset class="main_fieldset">', 'Form start OK' );
+is( $output11,
+'<fieldset class="main_fieldset"><form id="testform" method="post">',
+'Form start OK' );
 
 my $output = $form->render;
 ok( $output, 'get rendered output from form');
